com iagem estatica

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ html {
   left: 0;
   right: 0;
   bottom: 0;
-  background: url("https://photos-4.dropbox.com/t/2/AABPRvOMmmcKEVB0eiikHyaGTy_TM9GhADFMGTlCNM2Bfw/12/118377/jpeg/1024x768/3/1421863200/0/2/2014-09-24%2018.25.58.jpg/COmcByADIAIgASgCKAE/RJ3iVRsSbw-OxuI90XUMW62Xhe47RFysldcImfMYKz8");
+  background: url("http://i.imgur.com/bjTWYdf.jpg");
   opacity: 0.8;
   z-index: 9999;
 }
